# usurper

./: .gitignore  .gitmodules  CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_Kernel_import.cmake  LICENSE  README.md  calendar.c  calendar.h  cgi.c  cgi.h  config.c  config.h  discovery_task.c  discovery_task.h  flash.c  flash.h  githash.h  hc_task.c  hc_task.h  json_parser.c  json_parser.h  led_strip.c  led_strip.h  lwipopts.h  makefsdata.py  mbedtls_config.h  message.c  message.h  message_defs.h  pluto.c  pluto.h  powerwall.c  powerwall.h  sdk_callback.c  shelly.c  shelly.h  shelly.txt  ssi.c  ssi.h  (+25 more)
application/: CMakeLists.txt  cgi.c  json_parser.c  json_parser.h  led_strip.c  led_strip.h  message.c  message.h  mqtt.h  mqtt_task.c  ssi.c  weather.c  weather.h  worker_tasks.c
application/html_files/: addressable_led.shtml  friday.shtml  led_strip.shtml  moodlight.shtml  mqtt.shtml  network.shtml  status.shtml  syslog.shtml  t_gpio.shtml  t_relay_no.shtml  t_sensors.shtml  time.shtml  tm_thermostat.shtml  weather.shtml  wednesday.shtml  z_relay.shtml  z_relay_no.shtml  z_relay_test.shtml  zm_landscape.shtml  zs_landscape.shtml
debug/: README  debugserver  watchlog
home_controller/: worker_tasks.c
home_controller/html_files/: relay.shtml  software_load.shtml  t_status.shtml  ts_climates.shtml  wifi_country.shtml  zs_landscape.shtml
html_files/: addressable_led.shtml  day.shtml  debug.shtml  friday.shtml  gpio_defaults.shtml  index.shtml  landscape.shtml  landscape_monday.shtml  led_controller.shtml  monday.shtml  moodlight.shtml  network.shtml  personality.shtml  portrait.shtml  powerwall.shtml  relay.shtml  saturday.shtml  software_load.shtml  status.shtml  sunday.shtml  syslog.shtml  t_copy.shtml  t_gpio.shtml  t_schedule.shtml  t_sensors.shtml  thermostat.shtml  thursday.shtml  time.shtml  tp_edit.shtml  ts_setpoints.shtml  tuesday.shtml  units.shtml  weather.shtml  wednesday.shtml  wifi_country.shtml  z_relay.shtml  zm_landscape.shtml  zs_landscape.shtml
pluto/: CMakeLists.txt  FreeRTOSConfig.h  calendar.c  calendar.h  cgi.h  config.c  config.h  create_githash_h  flash.c  flash.h  githash.h.in  lwipopts.h  mbedtls_config.h  ping_core.c  ping_core.h  pluto.c  pluto.h  sdk_callback.c  ssi.h  udp.c  udp.h  usurper_ping.c  utility.c  utility.h  watchdog.c  web.c  web.h  wifi.c  worker_tasks.h
thermostat/: worker_tasks.c
thermostat/html_files/: debug.shtml  hotspot_detect.html  led_controller.shtml  monday.shtml  moodlight.shtml  network.shtml  personality.shtml  powerwall.shtml  sprinkler.xcf  status.shtml  syslog.shtml  t_advanced.shtml  t_gpio.shtml  t_graph.shtml  t_history.shtml  t_raw.shtml  t_schedule.shtml  time.shtml  tm_thermostat.shtml  tp_edit.shtml  ts_periods.shtml  ts_thermostat.shtml  units.shtml  z_relay_test.shtml
usurper/html_files/: addressable_led.shtml  debug.shtml  gpio_defaults.shtml  led_pattern.shtml  moodlight.shtml  network.shtml  remote_led_strips.shtml  status.shtml  system.shtml  time.shtml  ts_thermostat.shtml  units.shtml  weather.shtml
